Fitness-Studio CRM/force-app/main/default/objects/Class__c/fields/Is_Class_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Class_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Class Active</label>
    <type>Checkbox</type>
</CustomField>