Fitness-Studio CRM/force-app/main/default/objects/Class__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Strength</fullName>
            </value>
            <value>
                <fullName>Yoga</fullName>
            </value>
            <value>
                <fullName>Zumba</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>